--- a/Deploy/package.json
+++ b/Deploy/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TechBlogs",
+  "name": "techblog_db",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -17,5 +17,15 @@
   "bugs": {
     "url": "https://github.com/KyleEuman/TechBlogs/issues"
   },
-  "homepage": "https://github.com/KyleEuman/TechBlogs#readme"
+  "homepage": "https://github.com/KyleEuman/TechBlogs#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.0",
+    "express-session": "^1.17.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.2"
+  }
 }
